# subfast-net

./: .gitignore  AGENTS.md  README.md  ROI_EMBEDDING_OPTIMIZATION.md  pyproject.toml
docs/: detector.md  frame-presence.md  inference_optimization.md  roi-embedding.md  roi-matcher.md  roi-presence.md  roi_pair_matcher_optimization.md  roi_pair_matcher_training.md  roi_presence_embedding_training_commands.md  roi_presence_training.md  training_commands.md
docs/notes/: inference-optimization.md  roi-matcher-experiments.md
docs/superpowers/plans/: 2026-07-05-roi-balanced-training.md
docs/superpowers/specs/: 2026-07-05-roi-balanced-training-design.md
src/: __init__.py  cli.py  export_safetensors.py  export_unified_model.py  geometry.py  postprocess.py  roi_config.py  roi_dataset.py  roi_local_alignment.py  roi_loss.py  roi_metrics.py  roi_model.py  roi_pair_config.py  roi_pair_metrics.py  roi_pair_model.py  roi_pairs.py  roi_presence_config.py  roi_presence_dataset.py  roi_presence_loss.py  roi_presence_metrics.py  roi_presence_model.py  roi_presence_sampler.py  roi_presence_validation.py  roi_sampler.py  train.py  train_presence.py  train_roi.py  train_roi_pair.py
src/full_frame_timing/: README.md  __init__.py  cli.py  features.py  inference.py  prepare.py  train.py
src/h264_compressed_stream_timing/: README.md  __init__.py  cli.py  compressed_stream_prepare.py  compressed_stream_train.py  compressed_streaming.py
src/h264_stream_timing/: README.md  __init__.py  cli.py
src/h264_timing/: README.md  __init__.py  __main__.py  bitstream.py  cli.py  compressed_stream_prepare.py  compressed_stream_train.py  compressed_streaming.py  dataset.py  hashing.py  labels.example.csv  labels.example.srt  labels.py  loss.py  manifest.example.jsonl  metrics.py  model.py  predict.py  prepare.py  stream_dataset.py  stream_labels.py  stream_loss.py  stream_model.py  stream_postprocess.py  stream_predict.py  stream_train.py  streaming.py  synthesis.py  train.py  visual.py
src/subfast_detector/: __init__.py  __main__.py  cli.py  dataset.py  metrics.py  model.py  postprocess.py  targets.py  train.py
src/subfast_export/: __init__.py  checkpoint.py  cli.py  safetensors.py  unified.py
src/subfast_frame_presence/: __init__.py  benchmark.py  config.py  data.py  dataset.py  inference.py  loss.py  metrics.py  model.py  prepare.py  sampler.py  train.py  visualization.py
src/subfast_net/: __init__.py  __main__.py  cli.py
src/subfast_net/detector/: config.py  dataset.py  loss.py  metrics.py  model.py  targets.py  train.py
src/subfast_net/export/: safetensors.py  unified.py
src/subfast_net/roi/: __init__.py  data.py  pairs.py  training.py
src/subfast_net/roi/embedding/: __init__.py  config.py  loss.py  metrics.py  model.py  sampler.py  train.py
src/subfast_net/roi/matcher/: metrics.py  model.py  train.py
src/subfast_net/roi/presence/: config.py  dataset.py  sampler.py  train.py
src/subfast_roi_data/: __init__.py  data.py
src/subfast_roi_embedding/: __init__.py  alignment.py  config.py  loss.py  metrics.py  model.py  sampler.py  train.py
src/subfast_roi_matcher/: __init__.py  metrics.py  model.py  train.py
src/subfast_roi_presence/: __init__.py  dataset.py  loss.py  metrics.py  sampler.py  train.py  validation.py
src/subfast_shared/: __init__.py  binary_metrics.py  nn.py  runtime.py  vision.py
src/subtitle_timing_core/: __init__.py  dataset.py  formats.py  postprocess.py
src/subtitle_timing_stream/: __init__.py  stream_dataset.py  stream_labels.py  stream_loss.py  stream_postprocess.py  stream_predict.py  stream_train.py  streaming.py
src/tools/: __init__.py  __main__.py  cli.py  command.md  craft.py  filter_region_helper.html  prepare_roi.py  review_labels.py  review_roi.py  synthesize_samples.py  via_labels.py
tests/: test_cli.py  test_data_tools.py  test_export_unified_model.py  test_frame_presence.py  test_frame_presence_crops.py  test_frame_presence_v5.py  test_geometry.py  test_h264_timing.py  test_prepare_roi_samples.py  test_review_roi_segments.py  test_roi_local_alignment.py  test_roi_pair_model.py  test_roi_pairs.py  test_roi_presence_embedding.py  test_roi_presence_metrics.py  test_training_smoke.py
tools/: build_samples.py  command.md  prepare_roi_samples.py  review_roi_segments.py  synthesize_samples.py  via_labels.py
