[project]
name = "subfast-net"
version = "0.1.0"
description = "Subtitle detection models, H.264 timing, and dataset tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coremltools>=9.0",
    "numpy>=2.3,<2.4",
    "onnxruntime>=1.23",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "rapidfuzz>=3.14.5",
    "safetensors>=0.8.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
]

[project.scripts]
subfast-net = "subfast_net.cli:main"
h264-timing = "h264_timing.cli:main"
full-frame-timing = "full_frame_timing.cli:main"
subfast-tools = "tools.cli:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "subfast_net",
    "subfast_net.detector",
    "subfast_net.export",
    "subfast_net.roi",
    "subfast_net.roi.embedding",
    "subfast_net.roi.matcher",
    "subfast_net.roi.presence",
    "h264_timing",
    "full_frame_timing",
    "tools",
]
include-package-data = true

[tool.setuptools.package-data]
"h264_timing" = ["*.csv", "*.jsonl", "*.srt", "README.md"]
"full_frame_timing" = ["README.md"]
"tools" = ["*.html", "*.md"]
